javacc/game/Reader.java
/* Generated By:JavaCC: Do not edit this line. Reader.java */
package game;

import java.io.ByteArrayInputStream;
import java.io.InputStream;

public class Reader implements ReaderConstants {
  public static Comportement read(String s) throws ParseException
  {
    InputStream in = new ByteArrayInputStream(s.getBytes());
    Reader parser = new Reader(in);
    Comportement c = Nil.NIL;
    System.out.println("Lecture du comportement : " + s);
    try
    {
      c = CPT();
    }
    catch (Exception e)
    {
      System.out.println("NOK.");
      System.out.println(e.getMessage());
      Reader.ReInit(in);
    }
    catch (Error e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
    System.out.println("Comportement construit : " + c.toString());
    return c;
  }

/* Règles de grammaire de ce langage */
  static final public Comportement CPT() throws ParseException {
  Comportement c;
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
      c = OP();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DP:
        jj_consume_token(DP);
        t = jj_consume_token(DIGIT);
      {if (true) return new Repeat(c, Integer.parseInt(t.image));}
        break;
      default:
        jj_la1[0] = jj_gen;
      {if (true) return c;}
      }
      break;
    case STAR:
      jj_consume_token(STAR);
      c = CPT();
    {if (true) return new Star(c);}
      break;
    case ACO:
      jj_consume_token(ACO);
      c = SEQ();
      jj_consume_token(ACF);
    {if (true) return c;}
      break;
    case LPAR:
      jj_consume_token(LPAR);
      c = COUPLE();
      jj_consume_token(RPAR);
    {if (true) return c;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Comportement SEQ() throws ParseException {
  Comportement c1, c2;
    c1 = CPT();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUP:
      jj_consume_token(SUP);
      c2 = PREF();
      {if (true) return new Pref(c1, c2);}
      break;
    case PV:
      jj_consume_token(PV);
      c2 = SEQ();
      {if (true) return new Seq(c1, c2);}
      break;
    default:
      jj_la1[2] = jj_gen;
      {if (true) return new Seq(c1, Nil.NIL);}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Comportement PREF() throws ParseException {
  Comportement c1, c2;
    c1 = CPT();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUP:
      jj_consume_token(SUP);
      c2 = PREF();
      {if (true) return new Pref(c1, c2);}
      break;
    default:
      jj_la1[3] = jj_gen;
      {if (true) return new Pref(c1, Nil.NIL);}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Comportement COUPLE() throws ParseException {
  Comportement c1, c2;
    c1 = CPT();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PIPE:
      jj_consume_token(PIPE);
      c2 = CPT();
      {if (true) return new Alea(c1, c2);}
      break;
    case OU:
      jj_consume_token(OU);
      c2 = CPT();
      {if (true) return new Equitable(c1, c2);}
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Comportement OP() throws ParseException {
    jj_consume_token(16);
    {if (true) return new Explorer();}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ReaderTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x4000,0x11060,0x900,0x800,0x600,};
   }

  /** Constructor with InputStream. */
  public Reader(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Reader(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ReaderTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Reader(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ReaderTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Reader(ReaderTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ReaderTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[17];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 5; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 17; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
